src/css/nodeimageeditor.css
:host {
	background-color: #000000FF;
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	user-select: none;
}

.node-image-editor-nodes {
	overflow: auto;
	position: relative;
	display: flex;
	overflow: auto;
	flex: 1;
}

.node-image-editor-nodes-column {
	display: flex;
	flex-direction: column;
	margin-left: 50px;
	margin-right: 50px;
}

.node-image-editor-canvas {
	pointer-events: none;
}

.node-image-editor-node {
	background-color: var(--main-bg-color-bright);
	display: flex;
	flex-direction: column;
	margin-top: 50px;
	margin-bottom: 50px;
	padding: 5px;
}

.node-image-editor-node.collapsed {
	width: auto;
	margin-top: 1rem;
	margin-bottom: 1rem;
}

.node-image-editor-node.collapsed .node-image-editor-node-content {
	display: none;
}

.node-image-editor-node.collapsed .node-image-editor-node-preview {
	display: none;
}

.node-image-editor-node.collapsed button {
	display: none;
}

.node-image-editor-node-header {
	display: flex;
}

.node-image-editor-node-title {
	flex: 1;
}

.node-image-editor-node-buttons {
	display: flex;
}

.node-image-editor-node-buttons>div {
	cursor: pointer;
}

.node-image-editor-node-preview {
	position: relative;
	/*height: 32px;
	width: 32px;*/
	background-color: #000000FF;
	display: inline-block;
	width: min-content;
	display: flex;
}

.node-image-editor-sticker-selector {
	position: absolute;
	pointer-events: none;
	top: 0;
	width: 100%;
	height: 100%;
	--harmony-2d-manipulator-bg-color: rgba(0, 0, 0, 0);
	--harmony-2d-manipulator-border: 1px dashed white;
}

.node-image-editor-sticker-selector>div {
	position: absolute;
	width: 0.4rem;
	height: 0.4rem;
	background-color: black;
	pointer-events: all;
}

.node-image-editor-sticker-selector>.handle-move {
	cursor: move;
	top: calc(50% - 0.2rem);
	left: calc(50% - 0.2rem);
}

.node-image-editor-sticker-selector>.handle-resize {
	cursor: nesw-resize;
	top: -0.2rem;
	right: 0.2rem;
}

.node-image-editor-sticker-selector>.handle-rotate {
	cursor: grab;
	top: -0.2rem;
	left: -0.2rem;
}

.node-image-editor-node-content {
	display: flex;
}

.node-image-editor-node-ios {
	height: 100%;
	flex: 0;
}

.node-image-editor-node-io {
	width: 10px;
	height: 10px;
	background-color: green;
}

.node-image-editor-node-params {
	flex: 1;
	overflow: hidden;
	padding: 5px;
}

.node-image-editor-node-param {
	display: flex;
}

.node-image-editor-node-param>div {
	flex: 1;
	/*overflow: auto;*/
}

.node-image-editor-node-param>input {
	height: 1.5rem;
	box-sizing: border-box;
	vertical-align: middle;
}

.node-image-editor-node-change-image {
	opacity: 0%;
	position: absolute;
	top: 0px;
	left: 0px;
	height: 100%;
	width: 100%;
	/*background-image: url('./img/icons/image_search.svg');*/
	overflow: hidden;
	background-size: 100%;
	background-repeat: no-repeat;
	background-position: center;
	background-color: white;
	border-radius: 4px;
	cursor: pointer;
}

.node-image-editor-node input[type="file"] {
	opacity: 0;
	width: 100%;
	height: 100%;
}

.copy-button {
	width: 2rem;
	height: 2rem;
	display: inline-block;
	cursor: pointer;
}

input {
	/*transition: background-color 1s;*/
	background-color: #FFF;

	/* only animation-duration here is required, rest are optional (also animation-name but it will be set on hover)*/
	animation-duration: 1.5s;
	/* same as transition duration */
	animation-timing-function: linear;
	/* kind of same as transition timing */
	animation-delay: 0ms;
	/* same as transition delay */
	animation-iteration-count: 1;
	/* set to 2 to make it run twice, or Infinite to run forever!*/
	animation-direction: normal;
	/* can be set to "alternate" to run animation, then run it backwards.*/
	animation-fill-mode: none;
	/* can be used to retain keyframe styling after animation, with "forwards" */
	animation-play-state: running;
	/* can be set dynamically to pause mid animation*/

}

.flash {
	animation-name: copyAnimation;
}

@keyframes copyAnimation {
	0% {
		background-color: #ffdf5d;
	}

	100% {
		background-color: #FFF;
	}
}

harmony-toggle-button.sticker {
	margin: 0.5rem;
	padding: 0.2rem;
	border-radius: 0.5rem;
}

harmony-toggle-button.sticker.on {
	background-color: green;
}

harmony-toggle-button.sticker.off {
	background-color: red;
}

